# wallpaper-rs

./: Cargo.toml  README.md
html/: index.html
src/: main.rs  shellwords.rs  wallpaper.rs
