[package]
name = "wallpaper-rs"
version = "1.0.0"
authors = ["modelflat <zhykreg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4" }
regex = { version = "1.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
web-view = { version = "0.5.4", features = ["edge"] }
winapi = { version = "0.3", features = [
    "winuser", "errhandlingapi", "impl-debug", "impl-default",
] }
